--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.64.1",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3"
   }
