--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-webpack-plugin": "^5.5.3",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
+    "svg-url-loader": "^8.0.0",
     "tailwindcss": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
